k8s/coma/apps/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: coma-artichoke-network-https
  hostnames:
    - sonarr.coma.artichoke.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 60s
        backendRequest: 60s
      backendRefs:
        - name: sonarr
          port: 8989
