k8s/coma/apps/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: sonarr
spec:
  rules:
    - host: "sonarr.coma.artichoke.network"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
